k8s/message-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
      - name: message-service
        image: docker.io/grejs420/message-service:latest
        ports:
        - containerPort: 3002
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
