k8s/message-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
