k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: swwao.courses.orbit.au.dk
    http:
      paths:
      - path: /grp-6/auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /grp-6/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
      - path: /grp-6/chat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 3001
      - path: /grp-6/message(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: message-service
            port:
              number: 3002
      - path: /grp-6/frontend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
